Updated with more cards

--- a/index.css
+++ b/index.css
@@ -1,24 +1,29 @@
 body {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
     margin: 0;
     padding: 0;
+}
+main {
+    width: 100%;
+    overflow: hidden;
     background: #F6F6F6;
-    display:flex;
-    align-items: center;
-    justify-content: center;
+    position: relative;
     font-family: 'Quicksand', sans-serif;
 }
-.background {
-    position: absolute;
-    background: linear-gradient(153.35deg, #67B26F 0%, #4CA2CD 100%);
-    width: 300%;
+.section {
+    width: 100%;
     height: 100vh;
-    top: -50vh;
-    left: -100%;
-    transform: rotate(-33deg);
-    z-index: -1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.background {
+    position: fixed;
+    background: linear-gradient(135deg, #4CA2CD 0%, #4CA2CD 50%, #00000000 50%, #00000000 100%);
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
 }
 .card {
     width: 330px;
@@ -28,6 +33,7 @@ body {
     border-radius: 27px;
     box-sizing: border-box;
     padding: 24px 16px;
+    z-index: 2;
 }
 .card img {
     margin-top: 20px;
@@ -35,6 +41,147 @@ body {
 .info {
     width: 100%;
     text-align: end;
+}
+.info p {
+    width: 100%;
+    box-sizing: border-box;
+    text-align: left;
+    font-size: .9rem;
+    color: #666;
+    padding: 0 8px;
+}
+.timeline {
+    padding-top: 32px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 48px auto;
+    grid-template-rows: repeat(4, 105px);
+    color: #777;
+    place-items: center;
+}
+.timeline .icon {
+    background: #fafafa;
+}
+.timeline .icon ion-icon {
+    color: var(--card-theme-primary);
+    width: 28px;
+    height: 28px;
+}
+.timeline .icon:nth-of-type(1) {
+    grid-area: 1/1;
+}
+.timeline .icon:nth-of-type(3) {
+    grid-area: 2/1;
+}
+.timeline .icon:nth-of-type(5) {
+    grid-area: 3/1;
+}
+.timeline .icon:nth-of-type(7) {
+    grid-area: 4/1;
+}
+.timeline .dates {
+    font-size: .6em;
+    padding: 4px 6px;
+    margin-top: 8px;
+    background: rgba(var(--card-theme-primary-rgb), .1);
+    color: var(--card-theme-primary);
+    border-radius: 16px;
+}
+.timeline .line {
+    width: 100%;
+    height: 100%;
+    grid-area: 1 / 1 / 6 / 2;
+    display: flex;
+    justify-content: center;
+    z-index: -1;
+}
+.timeline .line svg {
+    height: 100%;
+}
+.timeline .text {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    box-sizing: border-box;
+    padding-left: 16px;
+}
+.timeline .text h1 {
+    color: #777;
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+}
+.timeline .text p {
+    color: #999;
+    margin: 0;
+    padding: 0;
+    font-size: .75rem;
+    padding-top: 2px;
+}
+.highlight {
+    padding: 0 16px;
+    padding-top: 24px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 480px;
+}
+.highlight .item {
+    padding-bottom: 16px;
+}
+.highlight .item h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+    color: #777;
+}
+.highlight .item p {
+    margin: 0;
+    padding: 0;
+    font-size: .8rem;
+    color: #999;
+    padding-top: 8px;
+}
+.highlight .links {
+    margin-top: 8px;
+    display: flex;
+}
+.highlight .item .links a {
+    color: var(--card-theme-primary);
+    font-size: .7rem;
+    display: flex;
+    align-items: center;
+    padding: 3px 6px;
+    padding-right: 8px;
+    border-radius: 16px;
+    margin-right: 6px;
+    background: rgba(var(--card-theme-primary-rgb), .1);
+    cursor: pointer;
+    text-decoration: none;
+}
+.highlight .item .links a:hover, .highlight .item .links a:focus  {
+    background: var(--card-theme-primary);
+    color: white;
+    outline: none;
+}
+.highlight .item ion-icon {
+    height: 14px;
+    width: 14px;
+    padding-right: 6px;
+}
+
+h1 {
+    font-weight: 400;
+    font-size: 26px;
+    margin: 0;
+}
+h3 {
+    font-weight: 100;
+    font-size: 14px;
+    color: #bbb;
+    margin: 0;
 }
 .info h1 {
     font-weight: 400;
@@ -64,4 +211,219 @@ body {
 }
 .info .links ion-icon:hover {
     color: #4CA2CD;
+}
+.hint {
+    position: absolute;
+    bottom: 16px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hint ion-icon {
+    color: #999;
+    width: 2rem;
+    height: 2rem;
+}
+
+.card .header {
+    width: 100%;
+    display: grid;
+    margin-top: 8px;
+    height: 56px;
+    grid-template-columns: 56px auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: 'icon title' 'icon subtitle';
+    column-gap: 12px;
+}
+.card .header .icon {
+    grid-area: icon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card .header .icon ion-icon {
+    color: var(--card-theme-primary);
+    width: 40px;
+    height: 40px;
+}
+
+.card .header h1 {
+    grid-area: title;
+    color: var(--card-theme-primary);
+}
+
+.card .header h3 {
+    grid-area: subtitle;
+}
+
+.card .grid {
+    display: grid;
+    width: 100%;
+    height: 490px;
+    box-sizing: border-box;
+    padding: 32px 0 16px 0;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 2fr;
+    grid-template-areas: 'vert small-top' 'vert small-bottom' 'large large';
+    grid-gap: 20px;
+}
+.card .grid div {
+    border-radius: 6px;
+    cursor: pointer;
+    border: 2px solid #eee;
+    padding: 8px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
+    opacity: .8;
+    transition: .2s ease-in-out;
+}
+
+.card .grid div:hover {
+    opacity: 1;
+    transform: scale(1.05);
+}
+.card .grid .vert {
+    grid-area: vert;
+}
+.card .grid .small-top {
+    grid-area: small-top;
+}
+.card .grid .small-bottom {
+    grid-area: small-bottom;
+}
+.card .grid .large {
+    grid-area: large;
+}
+
+.gallery {
+    display: none;
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 9;
+    --reel-height: 400px;
+}
+.gallery.shown {
+    display: block;
+}
+.gallery .close {
+    position: fixed;
+    top: 16px;
+    left: 16px;
+    background: none;
+    outline: none;
+    border: none;
+    user-select: none;
+    cursor: pointer;
+}
+.gallery .close ion-icon {
+    color: white;
+    width: 32px;
+    height: 32px;
+}
+.gallery .container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+    padding: 0 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    pointer-events: none;
+}
+.gallery .container .text {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 16px;
+}
+.gallery .container h1 {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    width: 70%;
+    color: #ffffff;
+    padding-bottom: 8px;
+    font-size: 1.3rem;
+}
+.gallery .container p {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    width: 70%;
+    color: #ffffff;
+    opacity: .7;
+    font-size: .8rem;
+}
+
+.gallery .container .images {
+    width: 100%;
+    height: var(--reel-height);
+    scroll-snap-type: x mandatory;
+    display: flex;
+    overflow-x: scroll;
+    pointer-events: all;
+}
+
+.gallery .container .progress {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.gallery .container .progress .dot {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    margin: 0 6px;
+    background: rgba(255, 255, 255, .7);
+    transition: all .2s;
+    transform: scale(1);
+}
+.gallery .container .progress .dot.active {
+    transform: scale(1.8);
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 1);
+}
+.gallery .images .image-container {
+    min-width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    scroll-snap-align: start;
+}
+.gallery .images .image-container img {
+    height: var(--reel-height);
+    border-radius: 12px;
+    box-shadow: 5px 4px 5px rgba(0, 0, 0, 0.05);
+}
+.gallery .images {
+    padding: 12px 0;
+    scroll-behavior: smooth;
+}
+.gallery .images::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+.gallery .images::-webkit-scrollbar-track {
+    background: none;
+}
+.gallery [data-gallery-image-reel]::-webkit-scrollbar-thumb {
+        background-color: rgba(255, 255, 255, 0.4);
+        border-radius: 12px;
 }
