--- a/index.css
+++ b/index.css
@@ -1,10 +1,12 @@
 * {
     user-select: none;
 }
+
 body {
     margin: 0;
     padding: 0;
 }
+
 main {
     width: 100%;
     overflow: hidden;
@@ -12,6 +14,7 @@ main {
     position: relative;
     font-family: 'Quicksand', sans-serif;
 }
+
 .section {
     width: 100%;
     height: 100vh;
@@ -21,13 +24,16 @@ main {
     align-items: center;
     justify-content: center;
 }
+
 .background {
     position: fixed;
-    background: linear-gradient(135deg, #4CA2CD 0%, #4CA2CD 50%, #00000000 50%, #00000000 100%);
+    background: #4CA2CD;
     width: 100vw;
     height: 100vh;
     z-index: 1;
+    transform-origin: center bottom;
 }
+
 .card {
     width: 330px;
     height: 580px;
@@ -38,13 +44,16 @@ main {
     padding: 24px 16px;
     z-index: 2;
 }
+
 .card img {
     margin-top: 20px;
 }
+
 .info {
     width: 100%;
     text-align: end;
 }
+
 .info p {
     width: 100%;
     box-sizing: border-box;
@@ -53,6 +62,7 @@ main {
     color: #666;
     padding: 0 8px;
 }
+
 .timeline {
     padding-top: 32px;
     width: 100%;
@@ -62,26 +72,33 @@ main {
     color: #777;
     place-items: center;
 }
+
 .timeline .icon {
     background: #fafafa;
 }
+
 .timeline .icon ion-icon {
     color: var(--card-theme-primary);
     width: 28px;
     height: 28px;
 }
+
 .timeline .icon:nth-of-type(1) {
     grid-area: 1/1;
 }
+
 .timeline .icon:nth-of-type(3) {
     grid-area: 2/1;
 }
+
 .timeline .icon:nth-of-type(5) {
     grid-area: 3/1;
 }
+
 .timeline .icon:nth-of-type(7) {
     grid-area: 4/1;
 }
+
 .timeline .dates {
     font-size: .6em;
     padding: 4px 6px;
@@ -90,6 +107,7 @@ main {
     color: var(--card-theme-primary);
     border-radius: 16px;
 }
+
 .timeline .line {
     width: 100%;
     height: 100%;
@@ -98,9 +116,11 @@ main {
     justify-content: center;
     z-index: -1;
 }
+
 .timeline .line svg {
     height: 100%;
 }
+
 .timeline .text {
     width: 100%;
     height: 100%;
@@ -111,12 +131,14 @@ main {
     box-sizing: border-box;
     padding-left: 16px;
 }
+
 .timeline .text h1 {
     color: #777;
     font-size: 1rem;
     margin: 0;
     padding: 0;
 }
+
 .timeline .text p {
     color: #999;
     margin: 0;
@@ -124,6 +146,7 @@ main {
     font-size: .75rem;
     padding-top: 2px;
 }
+
 .highlight {
     padding: 0 16px;
     padding-top: 24px;
@@ -131,15 +154,18 @@ main {
     width: 100%;
     height: 480px;
 }
+
 .highlight .item {
     padding-bottom: 16px;
 }
+
 .highlight .item h1 {
     margin: 0;
     padding: 0;
     font-size: 1rem;
     color: #777;
 }
+
 .highlight .item p {
     margin: 0;
     padding: 0;
@@ -147,10 +173,12 @@ main {
     color: #999;
     padding-top: 8px;
 }
+
 .highlight .links {
     margin-top: 8px;
     display: flex;
 }
+
 .highlight .item .links a {
     color: var(--card-theme-primary);
     font-size: .7rem;
@@ -164,11 +192,14 @@ main {
     cursor: pointer;
     text-decoration: none;
 }
-.highlight .item .links a:hover, .highlight .item .links a:focus  {
+
+.highlight .item .links a:hover,
+.highlight .item .links a:focus {
     background: var(--card-theme-primary);
     color: white;
     outline: none;
 }
+
 .highlight .item ion-icon {
     height: 14px;
     width: 14px;
@@ -180,23 +211,27 @@ h1 {
     font-size: 26px;
     margin: 0;
 }
+
 h3 {
     font-weight: 100;
     font-size: 14px;
     color: #bbb;
     margin: 0;
 }
+
 .info h1 {
     font-weight: 400;
     font-size: 30px;
     margin: 0 16px;
 }
+
 .info h3 {
     font-weight: 100;
     font-size: 14px;
     margin: 0 16px;
     color: #bbb;
 }
+
 .info .links {
     width: 100%;
     box-sizing: border-box;
@@ -206,15 +241,18 @@ h3 {
     align-items: center;
     justify-content: flex-end;
 }
+
 .info .links ion-icon {
     margin-left: 12px;
     font-size: 20px;
     color: #D3D3D3;
     cursor: pointer;
 }
+
 .info .links ion-icon:hover {
     color: #4CA2CD;
 }
+
 .hint {
     position: absolute;
     bottom: 52px;
@@ -223,6 +261,7 @@ h3 {
     align-items: center;
     justify-content: center;
 }
+
 .hint ion-icon {
     color: #999;
     width: 2rem;
@@ -239,12 +278,14 @@ h3 {
     grid-template-areas: 'icon title' 'icon subtitle';
     column-gap: 12px;
 }
+
 .card .header .icon {
     grid-area: icon;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .card .header .icon ion-icon {
     color: var(--card-theme-primary);
     width: 40px;
@@ -271,6 +312,7 @@ h3 {
     grid-template-areas: 'vert small-top' 'vert small-bottom' 'large large';
     grid-gap: 20px;
 }
+
 .card .grid div {
     border-radius: 6px;
     cursor: pointer;
@@ -290,15 +332,19 @@ h3 {
     opacity: 1;
     transform: scale(1.05);
 }
+
 .card .grid .vert {
     grid-area: vert;
 }
+
 .card .grid .small-top {
     grid-area: small-top;
 }
+
 .card .grid .small-bottom {
     grid-area: small-bottom;
 }
+
 .card .grid .large {
     grid-area: large;
 }
@@ -314,9 +360,11 @@ h3 {
     z-index: 9;
     --reel-height: 400px;
 }
+
 .gallery.shown {
     display: block;
 }
+
 .gallery .close {
     position: fixed;
     top: 16px;
@@ -327,11 +375,13 @@ h3 {
     user-select: none;
     cursor: pointer;
 }
+
 .gallery .close ion-icon {
     color: white;
     width: 32px;
     height: 32px;
 }
+
 .gallery .container {
     position: fixed;
     top: 0;
@@ -345,6 +395,7 @@ h3 {
     flex-direction: column;
     pointer-events: none;
 }
+
 .gallery .container .text {
     width: 100%;
     display: flex;
@@ -353,6 +404,7 @@ h3 {
     flex-direction: column;
     padding-top: 16px;
 }
+
 .gallery .container h1 {
     margin: 0;
     padding: 0;
@@ -362,6 +414,7 @@ h3 {
     padding-bottom: 8px;
     font-size: 1.3rem;
 }
+
 .gallery .container p {
     margin: 0;
     padding: 0;
@@ -388,6 +441,7 @@ h3 {
     align-items: center;
     justify-content: center;
 }
+
 .gallery .container .progress .dot {
     width: 6px;
     height: 6px;
@@ -397,11 +451,13 @@ h3 {
     transition: all .2s;
     transform: scale(1);
 }
+
 .gallery .container .progress .dot.active {
     transform: scale(1.8);
     border-radius: 50%;
     background: rgba(255, 255, 255, 1);
 }
+
 .gallery .images .image-container {
     min-width: 100%;
     height: 100%;
@@ -411,6 +467,7 @@ h3 {
     box-sizing: border-box;
     padding: 0 12px;
 }
+
 .gallery .images .image-container img {
     max-width: 100%;
     max-height: var(--reel-height);
@@ -423,14 +480,16 @@ h3 {
     scroll-behavior: smooth;
     position: relative;
 }
+
 .gallery .images::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
+    display: none;
 }
+
 .gallery .images::-webkit-scrollbar-track {
     background: none;
 }
+
 .gallery [data-gallery-image-reel]::-webkit-scrollbar-thumb {
-        background-color: rgba(255, 255, 255, 0.4);
-        border-radius: 12px;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 12px;
 }
